[#1330] Use EntityDataType stereotype on platform datatypes

--- a/domain/uml/platform_en_US.properties
+++ b/domain/uml/platform_en_US.properties
@@ -1,5 +1,6 @@
-#Thu Oct 08 16:21:04 CEST 2020
+#Thu Oct 29 08:57:10 CET 2020
 _label_platform__PlatformDataTypes__StringIdentifier=String identifier
 _label_platform__PlatformDataTypes__CodeIdentifier=Code identifier
+_label_platform__PlatformDataTypes__StringData=CopyOf_String identifier
 _label_platform__PlatformDataTypes__NumericIdentifier=Numeric identifier
 _label_platform__PlatformDataTypes=Data types
