--- a/domain/uml/platform_en_US.properties
+++ b/domain/uml/platform_en_US.properties
@@ -1,4 +1,4 @@
-#Thu Mar 25 15:38:25 CET 2021
+#Tue Jun 15 13:23:37 CEST 2021
 _label_platform__PlatformDataTypes__StringIdentifier=String identifier
 _label_platform__PlatformDataTypes__CodeIdentifier=Code identifier
 _label_platform__PlatformDataTypes__StringData=CopyOf_String identifier
