[#9733] SearchIndex - return filter components - multi language support

--- a/api/src/main/resources/messages-platform_hu.properties
+++ b/api/src/main/resources/messages-platform_hu.properties
@@ -1,2 +1,4 @@
 smartbit4all.message=Üdv mindenkinek
 smartbit4all.application.name=Platform alkalmazás
+smartbit4all.myspecificmessage2=Specific message2
+myspecificmessage1=Specific message1
