[#9866] LocaleSettingApi -  Spring MessageSource backend - utf-8

--- a/api/src/main/resources/messages-platform_hu.properties
+++ b/api/src/main/resources/messages-platform_hu.properties
@@ -1,4 +1,4 @@
-smartbit4all.message=‹dv mindenkinek
-smartbit4all.application.name=Platform alkalmaz·s
+smartbit4all.message=√údv mindenkinek
+smartbit4all.application.name=Platform alkalmaz√°s
 smartbit4all.myspecificmessage2=Specific message2
 myspecificmessage1=Specific message1
