--- a/api/src/main/resources/messages-platform_hu.properties
+++ b/api/src/main/resources/messages-platform_hu.properties
@@ -2,3 +2,4 @@ smartbit4all.message=Üdv mindenkinek
 smartbit4all.application.name=Platform alkalmazás
 smartbit4all.myspecificmessage2=Specific message2
 myspecificmessage1=Specific message1
+smartbit4all.myspecificmessage1=SB4 specific message1
