[#10461] add session.user.unknown to messages

--- a/api/src/main/resources/messages-platform_hu.properties
+++ b/api/src/main/resources/messages-platform_hu.properties
@@ -5,3 +5,4 @@ smartbit4all.myspecificmessage1=SB4 specific message1
 smartbit4all.myspecificmessage2=SB4 specific message2
 myspecificmessage3=Specific message3
 
+session.user.unknown=Ismeretlen felhasználó
