[#11799] MasterDataManagement - generic UI

--- a/api/src/main/resources/messages-platform_en.properties
+++ b/api/src/main/resources/messages-platform_en.properties
@@ -2,3 +2,6 @@ smartbit4all.message=Greetings everyone
 smartbit4all.application.name=Platform application
 
 session.user.unknown=Unknown user
+
+mdm.entry.notfound=Unable to find the {0} entry in the {1} master data definition.
+mdm.deinition.notfound=Unable to find the {0} master data definition.
