--- a/api/src/main/resources/messages-platform_hu.properties
+++ b/api/src/main/resources/messages-platform_hu.properties
@@ -6,3 +6,6 @@ smartbit4all.myspecificmessage2=SB4 specific message2
 myspecificmessage3=Specific message3
 
 session.user.unknown=Ismeretlen felhasználó
+
+mdm.entry.notfound=A {0} törzsadat nem található a {1} törzsadat definícióban.
+mdm.deinition.notfound=A {0} törzsadat definíció nem található.
