--- a/api/src/main/resources/messages-platform_en.properties
+++ b/api/src/main/resources/messages-platform_en.properties
@@ -5,3 +5,6 @@ session.user.unknown=Unknown user
 
 mdm.entry.notfound=Unable to find the {0} entry in the {1} master data definition.
 mdm.deinition.notfound=Unable to find the {0} master data definition.
+mdm.globalbranch.alreadyexists=Unable to start new global branch because the global branch is already exists for the {0} master data definition.
+mdm.entriesbranch.notempty=Unable to start new global branch because the some branches are already active for the {0} master data definition.
+mdm.globalbranch.empty=Unable to execute merge because the global branch is empty for the {0} master data definition.
