[#13747] MDM extension with inactivate

--- a/api/src/main/resources/messages-platform_en.properties
+++ b/api/src/main/resources/messages-platform_en.properties
@@ -8,3 +8,5 @@ mdm.deinition.notfound=Unable to find the {0} master data definition.
 mdm.globalbranch.alreadyexists=Unable to start new global branch because the global branch is already exists for the {0} master data definition.
 mdm.entriesbranch.notempty=Unable to start new global branch because the some branches are already active for the {0} master data definition.
 mdm.globalbranch.empty=Unable to execute merge because the global branch is empty for the {0} master data definition.
+mdm.inactives=inactive items
+mdm.actives=active items
