--- a/api/src/main/resources/messages-platform_hu.properties
+++ b/api/src/main/resources/messages-platform_hu.properties
@@ -12,3 +12,5 @@ mdm.deinition.notfound=A {0} törzsadat definíció nem található.
 mdm.globalbranch.alreadyexists=Nem lehet elindítani a közös szerkesztési ágat, mert az már létezik a {0} törzsadat definícióban.
 mdm.entriesbranch.notempty=Nem lehet elindítani a közös szerkesztési ágat, mert van szerkesztés alatti adatcsoport a {0} törzsadat definícióban.
 mdm.globalbranch.empty=Nem lehet végrehajtani a közös szerkesztési ág eredményének véglegesítését, mert nincs folyamatban lévő szerkesztés a {0} törzsadat definícióban.
+mdm.inactives=inaktív elemek
+mdm.actives=aktív elemek
