[#13746] új értékkészlet felvitele (MDMEntryDescriptor)

--- a/api/src/main/resources/messages-platform_en.properties
+++ b/api/src/main/resources/messages-platform_en.properties
@@ -10,3 +10,6 @@ mdm.entriesbranch.notempty=Unable to start new global branch because the some br
 mdm.globalbranch.empty=Unable to execute merge because the global branch is empty for the {0} master data definition.
 mdm.inactives=inactive items
 mdm.actives=active items
+mdm.ADD_NEW_ENTRY=Add new
+mdm.valueSetCode=Value set code
+mdm.valueSetName=Value set name
