--- a/api/src/main/resources/messages-platform_hu.properties
+++ b/api/src/main/resources/messages-platform_hu.properties
@@ -14,3 +14,6 @@ mdm.entriesbranch.notempty=Nem lehet elindítani a közös szerkesztési ágat, 
 mdm.globalbranch.empty=Nem lehet végrehajtani a közös szerkesztési ág eredményének véglegesítését, mert nincs folyamatban lévő szerkesztés a {0} törzsadat definícióban.
 mdm.inactives=inaktív elemek
 mdm.actives=aktív elemek
+mdm.ADD_NEW_ENTRY=Új érték lista
+mdm.valueSetCode=Érték lista kódja
+mdm.valueSetName=Érték lista neve
