[#13849] MDMEntryDescriptor: tableColumns vs listPageGridViews

--- a/api/src/main/resources/messages-platform_en.properties
+++ b/api/src/main/resources/messages-platform_en.properties
@@ -13,3 +13,4 @@ mdm.actives=active items
 mdm.ADD_NEW_ENTRY=Add new
 mdm.valueSetCode=Value set code
 mdm.valueSetName=Value set name
+branchingState=Operation
