--- a/api/src/main/resources/messages-platform_hu.properties
+++ b/api/src/main/resources/messages-platform_hu.properties
@@ -17,3 +17,4 @@ mdm.actives=aktív elemek
 mdm.ADD_NEW_ENTRY=Új érték lista
 mdm.valueSetCode=Érték lista kódja
 mdm.valueSetName=Érték lista neve
+branchingState=Művelet
