[#13855] fix action buttons on new MDM Entry
Also refresh actions after creation new entry.

--- a/api/src/main/resources/messages-platform_hu.properties
+++ b/api/src/main/resources/messages-platform_hu.properties
@@ -17,4 +17,8 @@ mdm.actives=aktív elemek
 mdm.ADD_NEW_ENTRY=Új érték lista
 mdm.valueSetCode=Érték lista kódja
 mdm.valueSetName=Érték lista neve
+mdm.next=Tovább
+mdm.finish=Létrehozás
+mdm.cancel=Mégsem
+
 branchingState=Művelet
