[#14916] MDM adminPage now shows which entry is open

--- a/api/src/main/resources/messages-platform_en.properties
+++ b/api/src/main/resources/messages-platform_en.properties
@@ -13,4 +13,6 @@ mdm.actives=Active items
 mdm.ADD_NEW_ENTRY=Add new
 mdm.valueSetCode=Value set code
 mdm.valueSetName=Value set name
+mdm.OPEN_VALUES=Value lists
+
 branchingState=Operation
