--- a/api/src/main/resources/messages-platform_hu.properties
+++ b/api/src/main/resources/messages-platform_hu.properties
@@ -20,5 +20,6 @@ mdm.valueSetName=Értéklista neve
 mdm.next=Tovább
 mdm.finish=Létrehozás
 mdm.cancel=Mégsem
+mdm.OPEN_VALUES=Értéklisták
 
 branchingState=Művelet
