--- a/api/src/main/resources/messages-platform_en.properties
+++ b/api/src/main/resources/messages-platform_en.properties
@@ -3,11 +3,12 @@ smartbit4all.application.name=Platform application
 
 session.user.unknown=Unknown user
 
-mdm.entry.notfound=Unable to find the {0} entry in the {1} master data definition.
-mdm.deinition.notfound=Unable to find the {0} master data definition.
-mdm.globalbranch.alreadyexists=Unable to start new global branch because the global branch is already exists for the {0} master data definition.
-mdm.entriesbranch.notempty=Unable to start new global branch because the some branches are already active for the {0} master data definition.
-mdm.globalbranch.empty=Unable to execute merge because the global branch is empty for the {0} master data definition.
+mdm.entry.notfound=Unable to find the {0} entry in the {1} master data definition. Try to refresh the page.
+mdm.deinition.notfound=Unable to find the {0} master data definition. Try to refresh the page.
+mdm.globalbranch.alreadyexists=Unable to start new global branch because the global branch is already exists for the {0} master data definition. Try to refresh the page.
+mdm.entriesbranch.notempty=Unable to start new global branch because the some branches are already active for the {0} master data definition. Try to refresh the page.
+mdm.globalbranch.empty=Unable to execute merge because the global branch is empty for the {0} master data definition. Try to refresh the page.
+mdm.globalbranch.underapproval=The master data changes are under approval already. Try to refresh the page.
 mdm.inactives=Inactive items
 mdm.actives=Active items
 mdm.ADD_NEW_ENTRY=Add new
