[#15522] message properties added to MDM_CHANGES

--- a/api/src/main/resources/messages-platform_en.properties
+++ b/api/src/main/resources/messages-platform_en.properties
@@ -15,5 +15,6 @@ mdm.ADD_NEW_ENTRY=Add new
 mdm.valueSetCode=Value set code
 mdm.valueSetName=Value set name
 mdm.OPEN_VALUES=Value lists
+OPEN_MDM_CHANGES=Changes
 
 branchingState=Operation
