--- a/api/src/main/resources/messages-platform_hu.properties
+++ b/api/src/main/resources/messages-platform_hu.properties
@@ -22,5 +22,6 @@ mdm.next=Tovább
 mdm.finish=Létrehozás
 mdm.cancel=Mégsem
 mdm.OPEN_VALUES=Értéklisták
+OPEN_MDM_CHANGES=Módosítások
 
 branchingState=Művelet
