[#15706] entryPage labels now come from properties

--- a/bff-api/src/main/resources/messages-bff_hu.properties
+++ b/bff-api/src/main/resources/messages-bff_hu.properties
@@ -6,3 +6,9 @@ UserSelfEditorPageApi.newpassword.weak=A megadott jelszó nem felel meg az elvá
 UserSelfEditorPageApi.email.weak=A megadott email cím nem megfelelő!
 UserSelfEditorPageApi.name.weak=A megadott név nem megfelelő!
 UserSelfEditorPageApi.username.weak=A megadott felhasználónév nem megfelelő!
+
+MDMEntryDescriptorPageModel.name = Leíró neve
+MDMEntryDescriptorPageModel.code = Leíró kódja
+MDMEntryDescriptorPageModel.vectorCollectionName= Leíró vektorkollekciójának neve
+MDMEntryDescriptorPageModel.vectorDBConnection=Leíró vektorkollekciójának vektorkapcsolata
+MDMEntryDescriptorPageModel.embeddingConnection=Leíró vektorkollekciójának beágyazó kapcsolata
