[#14917] add created/updated propertis to MDMEntries

--- a/api/src/main/resources/messages-platform_hu.properties
+++ b/api/src/main/resources/messages-platform_hu.properties
@@ -25,3 +25,10 @@ mdm.OPEN_VALUES=Értéklisták
 OPEN_MDM_CHANGES=Módosítások
 
 branchingState=Művelet
+
+created_name=Létrehozta
+created_timestamp=Létrehozás dátuma
+updated_name=Utolsó módosító
+updated_timestamp=Módosítás dátuma
+merged_name=Utolsó érvényesítő
+merged_timestamp=Érvényesítés dátuma
