[#15829] expression operation labels

--- a/api/src/main/resources/messages-platform_hu.properties
+++ b/api/src/main/resources/messages-platform_hu.properties
@@ -32,3 +32,21 @@ updated_name=Utolsó módosító
 updated_timestamp=Módosítás dátuma
 merged_name=Utolsó érvényesítő
 merged_timestamp=Érvényesítés dátuma
+
+EXPRESSION=Kifejezés
+EQUAL=Egyenl\u0151
+NOT_EQUAL=Nem egyenl\u0151
+LESS=Kevesebb
+LESS_OR_EQUAL= Kevesebb vagy egyenl\u0151
+GREATER=Nagyobb
+GREATER_OR_EQUAL=Nagyobb vagy egyenl\u0151
+LIKE=Hasonló
+NOT_LIKE=Nem hasonló
+BETWEEN=Között
+NOT_BETWEEN=Nem között
+IS_EMPTY=Üres
+IS_NOT_EMPTY=Nem Üres
+EXISTS=Tartalmazza
+NOT_EXISTS=Nem tartalmazza
+IN=Része
+NOT_IN=Nem része
